änderungen in den Avatarchanges und einfügen der lobby für spielbeitritt

--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -28,6 +28,16 @@
         <div id="optionen">
 
             <a href="../PHP/registrieren.php">Hier gehts zur Registrierung</a>
+            <br>
+            <br>
+            <a href="../PHP/login.php">Hier gehts zum Login</a>
+            <br>
+            <br>
+            <a href="../PHP/changes.php">Hier gehts zur Accountverwaltung</a>
+            <br>
+            <br>
+            <a href="../PHP/lobby.php">Hier gehts zu den Spielen</a>
+            <br>
 
             <!--
                 <button type="button" id="logoutbutton" onclick="ausloggen()">ausloggen</button>
