--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -38,6 +38,9 @@
             <br>
             <a href="../PHP/lobby.php">Hier gehts zu den Spielen</a>
             <br>
+            <br>
+            <a href="../PHP/logout.php">Hier wird ausgeloggt</a>
+
 
             <!--
                 <button type="button" id="logoutbutton" onclick="ausloggen()">ausloggen</button>
